Small fixes and updates
Removed unnecessary use of variables, added bulk additions and
subtractions, renamed Add and Subtract to Increase and Decrease - I plan
on adding pop-up boxes for the removal of classes and students and a
class graph for points

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 			<div class="card card-slim">
 				<div class="card-title"><h3>Add Class</h3></div>
 				<div class="card-content">
-					<input placeholder="World History" type="text" maxlength="100" class="addClassInput" /> <span class="btn btn-neutral btn-title addClass">Create</span>
+					<form>
+						<input placeholder="World History" type="text" maxlength="100" class="addClassInput" /> <button type="submit" class="btn btn-neutral btn-title addClass">Create</button>
+					</form>
 				</div>
 			</div>
 			<div class="classes">
