--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<!-- FILL -->
 			</div>
 		</div>
-		<script>if(typeof module === 'object') {window.module = module; module = undefined;}</script>
+		<script>if(typeof module === "object") {window.module = module; module = undefined;}</script>
 		<script src="assets/js/jquery-3.2.1.min.js" type="text/javascript"></script>
 		<script src="assets/js/bonus-point.js" type="text/javascript"></script>
 		<script>if(window.module) module = window.module;</script>
