Design changes and final student removal fix
Window bar now sits above content; "Add or Subtract Points" form no
longer splits to resize; fixed row loaded in after last student is
removed from a class

--- a/index.html
+++ b/index.html
@@ -26,17 +26,19 @@
 				</div>
 			</ul>
 		</div>
-		<div class="main">
-			<div class="card card-slim">
-				<div class="card-title"><h3>Add Class</h3></div>
-				<div class="card-content">
-					<form>
-						<input placeholder="World History" type="text" maxlength="100" class="addClassInput" /> <button type="submit" class="btn btn-neutral btn-title addClass">Create</button>
-					</form>
+		<div class="wrapper">
+			<div class="main">
+				<div class="card card-slim">
+					<div class="card-title"><h3>Add Class</h3></div>
+					<div class="card-content">
+						<form>
+							<input placeholder="World History" type="text" maxlength="100" class="addClassInput" /> <button type="submit" class="btn btn-neutral btn-title addClass">Create</button>
+						</form>
+					</div>
 				</div>
-			</div>
-			<div class="classes">
-				<!-- FILL -->
+				<div class="classes">
+					<!-- FILL -->
+				</div>
 			</div>
 		</div>
 		<script>if(typeof module === "object") {window.module = module; module = undefined;}</script>
