Finished main features
Students can be created and selected, deleted or have points added or removed from them in groups

--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,12 @@
 		
 		<div class="content"><!-- class --></div>
 		
+		<div class="controls">
+			<p class="addPointSelection"><i class="fa fa-plus"></i></p>
+			<p class="subtractPointSelection"><i class="fa fa-minus"></i></p>
+			<p class="deleteSelection"><i class="fa fa-trash"></i></p>
+		</div>
+		
 		<script>if (typeof module === "object") {window.module = module; module = undefined;}</script>
 		<script type="text/javascript" src="assets/js/jquery.min.js"></script>
 		<script type="text/javascript" src="assets/js/electron.js"></script>
