Design updates and offline usage

--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,7 @@
 	<head>
 		<title>Bonus Point</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Lato:100,200,300,400,500,600,700,800,900">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 		<link rel="stylesheet" href="assets/css/electron.css">
 		<link rel="stylesheet" href="assets/css/bonus-point.css">
 	</head>
