Move Roboto font to local resources

--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
 		<title>Bonus Point</title>
 		<meta charset="utf-8">
 		
+		<link rel="stylesheet" type="text/css" href="resources/css/roboto.min.css">
 		<link rel="stylesheet" type="text/css" href="resources/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="resources/css/bootstrap-grid.min.css">
 		
@@ -59,7 +60,8 @@
 		
 		<script type="text/javascript">
 			if(typeof module === "object") {
-				window.module = module; module = undefined;
+				window.module = module; 
+				module = undefined;
 			}
 		</script>
 		
